--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,24 @@
-task hello {
-    doLast {
-        println 'Hello world!'
-    }
+apply plugin: 'java'
+
+defaultTasks 'clean', 'build'
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile group: 'org.apache.maven', name: 'maven-artifact', version: '2.2.1'
+    compile group: 'org.apache.maven', name: 'maven-plugin-api', version: '2.2.1'
+    compile group: 'org.apache.maven', name: 'maven-project', version: '2.2.1'
+    compile group: 'org.apache.maven', name: 'maven-model', version: '2.2.1'
+    compile group: 'org.apache.maven', name: 'maven-core', version: '2.0.9'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.2.2'
+    compile group: 'com.github.spullara.mustache.java', name: 'compiler', version: '0.8.15'
+    compile group: 'com.wordnik', name: 'swagger-jaxrs_2.10', version: '1.3.2'
+    compile group: 'com.wordnik', name: 'swagger-jersey-jaxrs_2.10', version: '1.3.2'
+    compile group: 'org.reflections', name: 'reflections', version: '0.9.9-RC1'
+    compile group: 'commons-io', name: 'commons-io', version: '2.0.1'
+    compile group: 'log4j', name: 'log4j', version: '1.2.16'
+    compile group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'
+    testCompile group: 'junit', name: 'junit', version: '4.+'
 }
