This is getting annoying... it SHOULDN'T be this GD hard to connect jenkins and sonar... what a frigging PIA

--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,7 @@
                     <goal>prepare-agent</goal>
                   </goals>
                   <configuration>
+                      <destFile>target/jacoco.exec</destFile>
                   </configuration>
                 </execution>
               </executions>
